<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SqueezeControl</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="ButtonName">Get Albums</string>
    <string name="title_activity_main">Preferences</string>
    <string name="server_settings">SqueezeBox Server Settings</string>
    <string name="title_edittext_serverAddress">Server Address</string>
    <string name="summary_edittext_serverAddress">Address of SqueezeBox server</string>
    <string name="dialog_title_edittext_serverAddress">Server address</string>
    <string name="title_edittext_serverPort">Server port</string>
    <string name="dialog_title_edittext_serverPort">Server port</string>
    <string name="summary_edittext_serverPort">Port number of SqueezeBox server </string>
	<string name="title_edittext_maxRequestItems">Maximum items</string>
	<string name="summary_edittext_maxRequestItems">Maximum items to request from server</string>    
	<string name="dialog_title_edittext_maxRequestItems">Maximum items</string>    
	<string name="title_checkbox_enableMaxRequestItems">Enable maximum items</string>
	<string name="summary_checkbox_enableMaxRequestItems">Enable maximum items to request from server</string>	
</resources>
