<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android"
        >

    <PreferenceCategory
            android:title="@string/server_settings" >

        <EditTextPreference
                android:key="edittext_serverAddress"
                android:title="@string/title_edittext_serverAddress"
                android:summary="@string/summary_edittext_serverAddress"
                android:dialogTitle="@string/dialog_title_edittext_serverAddress"
                android:defaultValue="10.0.2.2"
                />
        		

         <EditTextPreference
                android:key="edittext_serverPort"
                android:title="@string/title_edittext_serverPort"
                android:summary="@string/summary_edittext_serverPort"
                android:dialogTitle="@string/dialog_title_edittext_serverPort"
                android:defaultValue="9001" 
                />
         
         <CheckBoxPreference
             			android:key="checkbox_enableMaxRequestItems"
                		android:title="@string/title_checkbox_enableMaxRequestItems"
                		android:summary="@string/summary_checkbox_enableMaxRequestItems"
                        android:defaultValue="false"
                        />
         
         <EditTextPreference
                android:key="edittext_maxRequestItems"
                android:title="@string/title_edittext_maxRequestItems"
                android:summary="@string/summary_edittext_maxRequestItems"
                android:dialogTitle="@string/dialog_title_edittext_maxRequestItems"
                android:defaultValue="10"
                android:dependency="checkbox_enableMaxRequestItems" 
                />
                 
    </PreferenceCategory>

    <PreferenceCategory
            android:title="PreferenceCategory B">

        <EditTextPreference
                android:key="edittext_serverPort"
                android:title="title_edittext_serverPort"
                android:summary="summary_edittext_serverPort"
                android:dialogTitle="dialog_title_edittext_serverPort" />

    </PreferenceCategory>

</PreferenceScreen>